--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -11,11 +11,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@cloudant/cloudant": "^4.2.3",
     "@nuxtjs/axios": "^5.8.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
-    "nuxt": "^2.0.0"
+    "jquery": "^3.4.1",
+    "nuxt": "^2.0.0",
+    "popper.js": "^1.16.0",
+    "pouchdb": "^7.1.1"
   },
   "devDependencies": {}
 }
