--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@cloudant/cloudant": "^4.2.3",
+    "@nuxtjs/auth": "^4.8.4",
     "@nuxtjs/axios": "^5.8.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "bootstrap": "^4.1.3",
